fix overlapping issue for headline

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 /* entire doc in Helvetica font */
 html{
 	font-family: Helvetica;
-	font-size: 1.35em;
+	font-size: 1.6em;
 	overflow: scroll;
 	/*height: 100vmax;*/
 }
@@ -49,7 +49,7 @@ header ul li:hover{
 	clear:both;
 	float:left;
 	background-color: #fbdb16;
-	height: 100vmax;
+	height: 35vmax;
 	
 	/*color:white;*/
 }
@@ -60,6 +60,7 @@ header ul li:hover{
 	padding:0;
 	/*opacity: 0.5;*/
 	/*background: rgba(255,0,0,0.4);*/
+	overflow: hidden;
 }
 
 .front-page h1{
@@ -67,7 +68,7 @@ header ul li:hover{
 	padding-bottom: 1%;
 	/*background-color: #fbdb16;*/
 	background: rgba(251, 229, 33, 0.79);
-	position: relative;
+	/*position: relative;*/
 }
 
 .front-page h2{
@@ -75,15 +76,20 @@ header ul li:hover{
 	/*background-color: #fbdb16;*/
 	background: rgba(255, 255, 255, 0.8);;
 	/*border: 6px solid white;*/
-	position: relative;
+	/*position: relative;*/
 }
 
 .front-page img{
 	width:100vmax; 
     height: auto;
+    margin-bottom: -1%;
     /*opacity: 0.8;*/
-    margin-bottom: -1vmax;
-    margin-top: -4.4vmax;
+    /*margin-bottom: -1vmax;
+    margin-top: -4.4vmax;*/
+}
+
+#headline{
+	position: fixed;
 }
 
 
@@ -142,7 +148,7 @@ footer h4{
 	/*top: 40%;*/
 	/*left: -5%;*/
 	color: white;
-	margin: 15px 3% 0% 0%;
+	margin: 20px 3% 0% 0%;
 }
 
 footer ul{
@@ -158,7 +164,7 @@ footer ul li{
 }
 
 footer img{
-	width:20px;
+	width:25px;
 	height: auto;
 	/*margin: 60% 15% 15% 15%;
 */}
